# uDeviceX

./: .clang-format  .gitignore  2  Dockerfile  Makefile  README.adoc  README.md  README.org  TODO.adoc  TODO.org  bootstrap  conf.mk  field.cpp  index.html  params.json
,/: README.md
0/: README.md  conf.def.h  run  tsdf  util
1/: README.adoc  README.md  base.h  conf.base.h  conf.cfg  conf.def.h  conf.h  launch_daint.sh  log.txt  mesh_solid.ply  rbcs-ic.txt  rigs-ic.txt  run  run.sh  run_daint.sh  sbatch_gen.sh  util
2/: README.md  base.h  channel.tsdf  conf.cfg  creator.py  launch.sh  pre.sh  rbcs-ic.txt  rigs-ic.txt  run  run.sh  util
3/: conf.base.h  conf.cfg  rbc.off  rbcs-ic.txt  run
4/: .gitignore  conf.cfg  param  run  utils  walls
DPD/: README.org  dscale.mac  flows.mac  freq.mac  kolmogorov.mac  kolmogorov2poiseuille.mac  mexp.mac  poiseuille2fourier.mac  poiseuille_kernel.mac  rtest_dscale.mac  rtest_mexp.mac  solvent.mac  solvent_esp.mac  vacf.mac
RBC/: expr2c.mac  maxima2cpp.mac  maxima2dump.mac  maxima2lines.mac  membr.ref.lines  membr2b.mac  membr2d.mac  membr2h.mac  membr2nonext.mac  membr_utils.mac  rtest_maxima2cpp.mac  rtest_maxima2dump.mac  rtest_maxima2lines.mac  shape.mac  (+4 more)
geom-wrapper/: CMakeLists.txt  README.org  geom-wrapper.cpp  geom-wrapper.h  hello_a.cpp  hello_b.cpp  rbc_utils.cpp  rbc_utils.h
geom-wrapper/Demo/: CMakeLists.txt  demo.cpp
geom-wrapper/demo/: CMakeLists.txt  iotags.cpp  iotags.sh  off.impl.h
geom-wrapper/demo/test_data/: rbc.org.ud  tags.ref.iotags.t1.txt  tags.ref.iotags.t2.txt  tags.ref.iotags.t3.txt
(+6406 files in other folders)
